<resources>
    <string name="app_name">Order Coffee </string>
    <string name="hint">Your Name</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank You!</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Add Chocolate</string>
    <string name="whipped_cream">Add Whipped Cream</string>
    <string name="name">Name</string>
    <string name="whippedCream">Whipped Cream ($1 Extra)</string>
    <string name="choco">Chocolate ($2 Extra)</string>
    <string name="order">Order</string>
</resources>
