<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginTop="8dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.example.android.justjava.MainActivity">

            <EditText
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint"
                android:inputType="textCapWords"
                android:textColor="@android:color/white"
                android:textColorHighlight="#ff0000"
                android:textColorHint="#FFFFFF"
                android:textCursorDrawable="@android:color/white" />

            <TextView
                android:text="@string/toppings"
                android:textColor="@android:color/background_light"
                style="@style/header_style"/>

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:buttonTint="@android:color/white"
                android:paddingLeft="24dp"
                android:text="@string/whippedCream"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:buttonTint="@android:color/white"
                android:paddingLeft="24dp"
                android:text="@string/choco"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:text="@string/quantity"
                android:textColor="@android:color/background_light"
                style="@style/header_style"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="1"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>

